computation of operation norm of matrix is added
a serious bug of lasso is also fixed

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,12 +2,12 @@
 # Makefile.in
 #
 
-DIR_INC += -I./libs/Eigen -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
+DIR_INC += -I/usr/local/include/eigen3 -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
 DIR_SRC += ./src/Frame ./src/LeastSquares ./src
 DIR_OBJ = ./obj
 DIR_BIN = ./bin
 
-DIR_LIB = -L./libs
+# DIR_LIB = -L./libs
 
 SRC = $(foreach n, $(DIR_SRC),$(wildcard $(n)/*.cpp))
 # TT = $(patsubst %.cpp,%.o,$(SRC))
