--- a/Makefile.in
+++ b/Makefile.in
@@ -2,24 +2,25 @@
 # Makefile.in
 #
 
-DIR_INC += -I/usr/local/Cellar/Eigen/3.2.2/include/eigen3 -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
+DIR_INC += -IE:/libs/Eigen -IE:/libs/SuiteSparse/include -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
 DIR_SRC += ./src/Frame ./src/LeastSquares ./src
 DIR_OBJ = ./obj
 DIR_BIN = ./bin
 
-# DIR_LIB = -LE:/libs
+DIR_LIB = -LE:/libs 
 
 SRC = $(foreach n, $(DIR_SRC),$(wildcard $(n)/*.cpp))
 # TT = $(patsubst %.cpp,%.o,$(SRC))
 # TT = $(notdir $(SRC))
 OBJ = $(patsubst %.cpp,$(DIR_OBJ)/%.o,$(notdir $(SRC)))
 
+LIBS = -lumfpack -lamd -lsuitesparseconfig -lcholmod -lcolamd -llapack -lcblas -lblas -lgfortran
 
 TARGET = all
 BIN_TARGET = $(DIR_BIN)/$(TARGET)
 
-CC = g++
-CFLAGS = -g -Wall $(DIR_INC)
+CC = g++ 
+CFLAGS = -g -Wall -lgfortran -std=c++11 $(DIR_INC)
 
 vpath %.cpp ./src/Frame
 vpath %.cpp ./src/LeastSquares
