delete eigen library

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,7 +2,7 @@
 # Makefile.in
 #
 
-DIR_INC += -I/usr/local/include/eigen3 -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
+DIR_INC += -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
 DIR_SRC += ./src/Frame ./src/LeastSquares ./src
 DIR_OBJ = ./obj
 DIR_BIN = ./bin
