--- a/Makefile.in
+++ b/Makefile.in
@@ -2,7 +2,7 @@
 # Makefile.in
 #
 
-DIR_INC += -I/usr/local/include/eigen3 -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
+DIR_INC += -I../Eigen -I./include/Base -I./include/LeastSquares -I./include/FunctionRepository -I./include/Algorithms -I./include/ThirdParty -I./include
 DIR_SRC += ./src/Frame ./src/LeastSquares ./src
 DIR_OBJ = ./obj
 DIR_BIN = ./bin
@@ -14,13 +14,13 @@ SRC = $(foreach n, $(DIR_SRC),$(wildcard $(n)/*.cpp))
 # TT = $(notdir $(SRC))
 OBJ = $(patsubst %.cpp,$(DIR_OBJ)/%.o,$(notdir $(SRC)))
 
-LIBS = -lumfpack -lamd -lsuitesparseconfig -lcholmod -lcolamd -llapack -lcblas -lblas
+LIBS = -lumfpack -lamd -lsuitesparseconfig -lcholmod -lcolamd -llapack -lblas
 
 TARGET = all
 BIN_TARGET = $(DIR_BIN)/$(TARGET)
 
 CC = g++
-CFLAGS = -g -Wall $(DIR_INC)
+CFLAGS = -g -Wall -std=c++11 $(DIR_INC)
 
 vpath %.cpp ./src/Frame
 vpath %.cpp ./src/LeastSquares
