--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,7 @@ CXX = g++
 #----------------------------------------------------- 
 
 CFLAGS 		= -g -Wall
-CXXFLAGS 	= -O3
+CXXFLAGS 	= -O3 -std=c++11
 
 #-----------------------------------------------------
 # Include Path
