--- a/Makefile.in
+++ b/Makefile.in
@@ -14,8 +14,8 @@ CXX = g++
 # Flags for compilers
 #----------------------------------------------------- 
 
-CFLAGS 		= -g -Wall
-CXXFLAGS 	= -O3
+CFLAGS 		= -g -Wall 
+CXXFLAGS 	= -O3 -std=c++11
 
 #-----------------------------------------------------
 # Include Path
@@ -36,7 +36,7 @@ DIR_LIB = ./
 # Libraries that are used
 #-----------------------------------------------------
 
-LIB = -lumfpack -lamd -lsuitesparseconfig -lcholmod -lcolamd -llapack -lcblas -lblas
+LIB = -lumfpack -lamd -lsuitesparseconfig -lcholmod -lcolamd -llapack -lblas
 
 #-----------------------------------------------------
 # OBJ Path
