new design on solver

--- a/examples/makefile
+++ b/examples/makefile
@@ -26,3 +26,10 @@ bin/matrix: obj/matrix.o
 	$(CXX) obj/matrix.o -L$(DIR_LIB) -o $@ $(LIB)
 obj/matrix.o: matrix.cpp ../include/Base/Matrix.hpp ../include/Base/MatrixImpl.hpp ../include/Base/ArrayImpl.hpp ../include/Base/Array.hpp
 	$(CXX) $(CXXFLAGS) $(I) -c $< -o $@
+
+solver: bin/solver
+	
+bin/solver: obj/solver.o
+	$(CXX) obj/solver.o -L$(DIR_LIB) -o $@ $(LIB)
+obj/solver.o: solver.cpp ../include/Base/Solver.hpp
+	$(CXX) $(CXXFLAGS) $(I) -c $< -o $@
